fix: bump z-index

--- a/src/components/PlaygroundSelect/PlaygroundSelect.module.scss
+++ b/src/components/PlaygroundSelect/PlaygroundSelect.module.scss
@@ -1,6 +1,6 @@
 .playgroundContainer {
     padding-left: 50px;
-    z-index: 10;
+    z-index: 11;
 }
 
 .dropdownLabel {
@@ -11,5 +11,5 @@
 
 .dropdown {
     width: fit-content;
-    z-index: 10;
+    z-index: 11;
 }
